Ulkoinen komponentti 'Toast' lisätty kertomaan onko vastaus oikein vai väärin

--- a/src/index.css
+++ b/src/index.css
@@ -28,26 +28,29 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #121629;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  color: #FFFFFF;
 }
 
 button {
   border-radius: 8px;
   border: 1px solid transparent;
+  border-color: #E43F5A;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
-  transition: border-color 0.25s;
+  transition: background-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  background-color: #E43F5A;
 }
 button:focus,
 button:focus-visible {
