--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: #ffffff;
   background-color: #242424;
 
   font-synthesis: none;
@@ -34,7 +34,8 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-  color: #FFFFFF;
+  color: #E43F5A;
+  margin-bottom: 50px;
 }
 
 button {
@@ -45,17 +46,31 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #121629;
   cursor: pointer;
   transition: background-color 0.25s;
 }
 button:hover {
   background-color: #E43F5A;
+  color: #121629;
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
+
+.end-quiz-btn {
+  background-color: #121629;
+  color: #E43F5A;
+  font-weight: bolder;
+}
+
+.quiz-page {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+
 
 @media (prefers-color-scheme: light) {
   :root {
