Feedback komponentti luotu näyttämään quizin tulos, käyttää ulkoista react-circular-progressbar komponenttia

--- a/src/index.css
+++ b/src/index.css
@@ -32,8 +32,14 @@ body {
 }
 
 h1 {
-  font-size: 3em;
+  font-size: 2.5em;
   line-height: 1.1;
+  color: #E43F5A;
+  margin-bottom: 50px;
+}
+
+h2 {
+  font-size: 1.3em;
   color: #E43F5A;
   margin-bottom: 50px;
 }
@@ -44,9 +50,10 @@ button {
   border-color: #E43F5A;
   padding: 0.6em 1.2em;
   font-size: 1em;
-  font-weight: 500;
+  font-weight: 700;
   font-family: inherit;
   background-color: #121629;
+  color: #E43F5A;
   cursor: pointer;
   transition: background-color 0.25s;
 }
@@ -60,6 +67,12 @@ button:hover {
   flex-direction: column;
 }
 
+.feedback-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 
 
 @media (prefers-color-scheme: light) {
@@ -69,8 +82,5 @@ button:hover {
   }
   a:hover {
     color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
   }
 }
