--- a/src/index.css
+++ b/src/index.css
@@ -33,13 +33,14 @@ body {
 h1 {
   font-size: 2.5em;
   color: #E43F5A;
-  margin-bottom: 100px;
+  margin-bottom: 80px;
   margin-top: 0;
 }
 
 h2 {
   font-size: 1.3em;
-  color: #E43F5A;
+  color: #FFFFFF;
+  margin-top: 30px;
   margin-bottom: 50px;
 }
 
@@ -65,7 +66,6 @@ button:hover {
   color: #121629;
 }
 
-
 .quiz-page {
   display: flex;
   flex-direction: column;
@@ -80,6 +80,10 @@ button:hover {
 .feedback-end-quiz-btn {
   color: #ffffff;
   background-color: #1D223B;
+}
+
+.feedback-end-quiz-btn:hover {
+  color: #FFFFFF;
 }
 
 
