--- a/src/pages/quizpage.css
+++ b/src/pages/quizpage.css
@@ -1,21 +1,6 @@
-
+/*Default mobile size*/
 .quiz-page {
     display: flex;
     flex-direction: column;
-  }
-  
-  .feedback-page {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .feedback-end-quiz-btn {
-    color: #ffffff;
-    background-color: #1D223B;
-  }
-  
-  .feedback-end-quiz-btn:hover {
-    color: #FFFFFF;
   }
   
