--- a/src/pages/homepage.css
+++ b/src/pages/homepage.css
@@ -2,10 +2,22 @@
 .homepage {
     color: #ffffff;
 }
+
+.homepage-header {
+    margin-bottom: 20px;
+}
+
 .homepage-subheader {
     margin: 0;
 }
   
+.homepage-image {
+    width: 90px;
+    height: 90px;
+    margin-bottom: 40px;
+    border-radius: 50px;
+}
+
 .start-quiz-container {
     margin-top: 40px;
 }
@@ -50,6 +62,12 @@
     .homepage-subheader {
         font-size: 1.3rem;
     }
+
+    .homepage-image {
+        width: 130px;
+        height: 130px;
+        border-radius: 65px;
+    }
 }
 
 
@@ -61,6 +79,12 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+    }
+
+    .homepage-image {
+        width: 160px;
+        height: 160px;
+        border-radius: 80px;
     }
 
     .homepage-subheader {
