--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
 /*Default mobile size*/
-
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -47,13 +46,14 @@ button {
   border: 1px solid transparent;
   border-color: #E43F5A;
   padding: 10px;
-  font-size: 1rem;
+  font-size: 1.2rem;
   font-weight: 600;
-  font-family: inherit;
+  font-family: 'Bebas Neue', system-ui, Avenir, Helvetica, Arial, sans-serif;
   background-color: #121629;
   color: #E43F5A;
   cursor: pointer;
   transition: background-color 0.25s;
+  letter-spacing: 1.5px;
 }
 button:hover {
   background-color: #E43F5A;
@@ -77,7 +77,7 @@ button:hover {
   }
 
   button {
-    font-size: 1.1rem;
+    font-size: 1.3rem;
     padding: 12px;
     border-radius: 12px;
   }
@@ -102,7 +102,7 @@ button:hover {
   }
 
   button {
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     padding: 16px;
     border-radius: 14px;
   }
