Koodia kommentoitu selkeyttämään sitä

--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,7 @@ h1 {
   color: #E43F5A;
   margin-bottom: 40px;
   margin-top: 0;
+  text-shadow: 4px 5px 1px #000000;
 }
 
 h2 {
@@ -66,6 +67,8 @@ button:hover {
 
   h1 {
     font-size: 3.5em;
+    text-shadow: 5px 5px 1px #000000;
+
   }
 
   h2 {
